--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-6-registration-login-example",
+  "name": "Test-Project",
   "version": "1.0.0",
   "repository": {
     "type": "git",
